Fix overflow

--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -1,7 +1,9 @@
 header {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
+    z-index: 1000;
     transition: background-color 0.3s ease;
 }
 
